# sfml-tictactoe

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: App.cpp  App.hpp  Board.cpp  Board.hpp  Game.cpp  Game.hpp
